Continued work on algorithm batch processing (#947).
git-svn-id: https://src.heuristiclab.com/svn/core/trunk@3262 2abd9481-f8db-48e9-bd25-06bc13291c1b

--- a/sources/HeuristicLab.Core/3.3/HeuristicLab.Core-3.3.csproj
+++ b/sources/HeuristicLab.Core/3.3/HeuristicLab.Core-3.3.csproj
@@ -102,6 +102,9 @@
     <Compile Include="Cloner.cs" />
     <Compile Include="Attributes\CreatableAttribute.cs" />
     <None Include="HeuristicLabCorePlugin.cs.frame" />
+    <Compile Include="Executable.cs" />
+    <Compile Include="ExecutionState.cs" />
+    <Compile Include="Interfaces\IExecutable.cs" />
     <Compile Include="Interfaces\IParameterizedNamedItem.cs" />
     <Compile Include="Interfaces\IParameterizedItem.cs" />
     <Compile Include="Interfaces\IAtomicOperation.cs" />
