Implemented initialization of `Variable` and `Constant` terminal nodes. #938 (Data types and operators for regression problems)
git-svn-id: https://src.heuristiclab.com/svn/core/trunk@3269 2abd9481-f8db-48e9-bd25-06bc13291c1b

--- a/sources/HeuristicLab.Random/3.3/HeuristicLab.Random-3.3.csproj
+++ b/sources/HeuristicLab.Random/3.3/HeuristicLab.Random-3.3.csproj
@@ -92,8 +92,10 @@
     <Compile Include="NormalDistributedRandom.cs">
       <SubType>Code</SubType>
     </Compile>
+    <Compile Include="NormalRandomizer.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="RandomCreator.cs" />
+    <Compile Include="UniformRandomizer.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\..\HeuristicLab.Collections\3.3\HeuristicLab.Collections-3.3.csproj">
