Continued work on algorithm batch processing (#947).
git-svn-id: https://src.heuristiclab.com/svn/core/trunk@3274 2abd9481-f8db-48e9-bd25-06bc13291c1b

--- a/sources/HeuristicLab.Optimization.Views/3.3/HeuristicLab.Optimization.Views-3.3.csproj
+++ b/sources/HeuristicLab.Optimization.Views/3.3/HeuristicLab.Optimization.Views-3.3.csproj
@@ -97,11 +97,11 @@
     <Compile Include="BatchRunView.Designer.cs">
       <DependentUpon>BatchRunView.cs</DependentUpon>
     </Compile>
-    <Compile Include="BatchRunListView.cs">
+    <Compile Include="OptimizerListView.cs">
       <SubType>UserControl</SubType>
     </Compile>
-    <Compile Include="BatchRunListView.Designer.cs">
-      <DependentUpon>BatchRunListView.cs</DependentUpon>
+    <Compile Include="OptimizerListView.Designer.cs">
+      <DependentUpon>OptimizerListView.cs</DependentUpon>
     </Compile>
     <Compile Include="ExperimentView.cs">
       <SubType>UserControl</SubType>
