Implemented reviewers' comments (#893).
git-svn-id: https://src.heuristiclab.com/svn/core/trunk@3290 2abd9481-f8db-48e9-bd25-06bc13291c1b

--- a/sources/HeuristicLab.Optimizer/3.3/app.config
+++ b/sources/HeuristicLab.Optimizer/3.3/app.config
@@ -10,6 +10,9 @@
             <setting name="ShowStartPage" serializeAs="String">
                 <value>True</value>
             </setting>
+            <setting name="ShowOperatorsSidebar" serializeAs="String">
+                <value>False</value>
+            </setting>
         </HeuristicLab.Optimizer.Properties.Settings>
     </userSettings>
 </configuration>
