--- a/sources/HeuristicLab.Optimizer/3.3/app.config
+++ b/sources/HeuristicLab.Optimizer/3.3/app.config
@@ -13,6 +13,9 @@
             <setting name="ShowOperatorsSidebar" serializeAs="String">
                 <value>False</value>
             </setting>
+            <setting name="ShowClipboard" serializeAs="String">
+                <value>True</value>
+            </setting>
         </HeuristicLab.Optimizer.Properties.Settings>
     </userSettings>
 </configuration>
