--- a/sources/HeuristicLab.Optimizer/3.3/Properties/Settings.settings
+++ b/sources/HeuristicLab.Optimizer/3.3/Properties/Settings.settings
@@ -8,5 +8,8 @@
     <Setting Name="ShowOperatorsSidebar" Type="System.Boolean" Scope="User">
       <Value Profile="(Default)">False</Value>
     </Setting>
+    <Setting Name="ShowClipboard" Type="System.Boolean" Scope="User">
+      <Value Profile="(Default)">True</Value>
+    </Setting>
   </Settings>
 </SettingsFile>
