Documented some of the test functions with literature references. Renamed Griewangk function as it is actually called Griewank function. Schwefel is hard to find, used self-citation as Potter and DeJong's description from 1994 seems wrong Levy is almost impossible to find and defined only for 2 variables, the implementation looks fishy (there was also a bug) Booth, and Matyas are also just from a single website Still missing is Zakharov and SumSquares #934
git-svn-id: https://src.heuristiclab.com/svn/core/trunk@3315 2abd9481-f8db-48e9-bd25-06bc13291c1b

--- a/sources/HeuristicLab.Problems.TestFunctions/3.3/HeuristicLab.Problems.TestFunctions-3.3.csproj
+++ b/sources/HeuristicLab.Problems.TestFunctions/3.3/HeuristicLab.Problems.TestFunctions-3.3.csproj
@@ -86,7 +86,7 @@
     <Compile Include="Evaluators\AckleyEvaluator.cs" />
     <Compile Include="Evaluators\BealeEvaluator.cs" />
     <Compile Include="Evaluators\BoothEvaluator.cs" />
-    <Compile Include="Evaluators\GriewangkEvaluator.cs" />
+    <Compile Include="Evaluators\GriewankEvaluator.cs" />
     <Compile Include="Evaluators\LevyEvaluator.cs" />
     <Compile Include="Evaluators\MatyasEvaluator.cs" />
     <Compile Include="Evaluators\RastriginEvaluator.cs" />
@@ -104,6 +104,7 @@
     <Compile Include="MoveEvaluators\AckleyAdditiveMoveEvaluator.cs" />
     <Compile Include="MoveEvaluators\BealeAdditiveMoveEvaluator.cs" />
     <Compile Include="MoveEvaluators\BoothAdditiveMoveEvaluator.cs" />
+    <Compile Include="MoveEvaluators\GriewankAdditiveMoveEvaluator.cs" />
     <Compile Include="MoveEvaluators\ZakharovAdditiveMoveEvaluator.cs" />
     <Compile Include="MoveEvaluators\SumSquaresAdditiveMoveEvaluator.cs" />
     <Compile Include="MoveEvaluators\SphereAdditiveMoveEvaluator.cs" />
@@ -112,7 +113,6 @@
     <Compile Include="MoveEvaluators\RosenbrockAdditiveMoveEvaluator.cs" />
     <Compile Include="MoveEvaluators\RastriginAdditiveMoveEvaluator.cs" />
     <Compile Include="MoveEvaluators\LevyAdditiveMoveEvaluator.cs" />
-    <Compile Include="MoveEvaluators\GriewangkAdditiveMoveEvaluator.cs" />
     <Compile Include="MoveEvaluators\AdditiveMoveEvaluator.cs" />
     <Compile Include="MoveEvaluators\RealVectorAdditiveMoveWrapper.cs" />
     <Compile Include="SingleObjectiveTestFunctionProblem.cs" />
