added possibility to change visibility of columns in !StringConvertibleMatrixView (ticket #968)
git-svn-id: https://src.heuristiclab.com/svn/core/trunk@3316 2abd9481-f8db-48e9-bd25-06bc13291c1b

--- a/sources/HeuristicLab.Data.Views/3.3/HeuristicLab.Data.Views-3.3.csproj
+++ b/sources/HeuristicLab.Data.Views/3.3/HeuristicLab.Data.Views-3.3.csproj
@@ -91,6 +91,12 @@
     <Compile Include="BoolValueView.Designer.cs">
       <DependentUpon>BoolValueView.cs</DependentUpon>
     </Compile>
+    <Compile Include="ColumnsVisibilityDialog.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="ColumnsVisibilityDialog.Designer.cs">
+      <DependentUpon>ColumnsVisibilityDialog.cs</DependentUpon>
+    </Compile>
     <Compile Include="ComparisonView.cs">
       <SubType>UserControl</SubType>
     </Compile>
