--- a/sources/HeuristicLab.Optimizer/3.3/HeuristicLab.Optimizer-3.3.csproj
+++ b/sources/HeuristicLab.Optimizer/3.3/HeuristicLab.Optimizer-3.3.csproj
@@ -138,6 +138,8 @@
   <ItemGroup>
     <None Include="app.config" />
     <EmbeddedResource Include="Documents\FirstSteps.rtf" />
+    <EmbeddedResource Include="Documents\LS_OneMax.hl" />
+    <EmbeddedResource Include="Documents\SA_Rastrigin.hl" />
     <None Include="HeuristicLab.snk" />
     <None Include="Properties\AssemblyInfo.frame" />
     <None Include="Properties\Settings.settings">
