updated Evolution Stratgy #932 StrategyParameters moved completely out of the ES into the encoding and problem, because they are inherently problem specific The ProblemDimension and a few other parameters of ES were removed Fixed a few bugs also and added some documentation
git-svn-id: https://src.heuristiclab.com/svn/core/trunk@3336 2abd9481-f8db-48e9-bd25-06bc13291c1b

--- a/sources/HeuristicLab.Logging/3.2/HeuristicLab.Logging-3.2.csproj
+++ b/sources/HeuristicLab.Logging/3.2/HeuristicLab.Logging-3.2.csproj
@@ -84,6 +84,7 @@
   <ItemGroup>
     <Compile Include="BestAverageWorstQualityCalculator.cs" />
     <Compile Include="PointXYChartView.cs">
+      <SubType>UserControl</SubType>
     </Compile>
     <Compile Include="PointXYChartView.Designer.cs">
       <DependentUpon>PointXYChartView.cs</DependentUpon>
@@ -92,11 +93,13 @@
     <Compile Include="Linechart.cs" />
     <Compile Include="HeuristicLabLoggingPlugin.cs" />
     <Compile Include="LinechartView.cs">
+      <SubType>UserControl</SubType>
     </Compile>
     <Compile Include="LinechartView.Designer.cs">
       <DependentUpon>LinechartView.cs</DependentUpon>
     </Compile>
     <Compile Include="LogView.cs">
+      <SubType>UserControl</SubType>
     </Compile>
     <Compile Include="LogView.Designer.cs">
       <DependentUpon>LogView.cs</DependentUpon>
