--- a/sources/HeuristicLab.Encodings.RealVectorEncoding/3.3/HeuristicLab.Encodings.RealVectorEncoding-3.3.csproj
+++ b/sources/HeuristicLab.Encodings.RealVectorEncoding/3.3/HeuristicLab.Encodings.RealVectorEncoding-3.3.csproj
@@ -102,11 +102,18 @@
     <Compile Include="Crossovers\UniformAllPositionsArithmeticCrossover.cs" />
     <Compile Include="Crossovers\UniformSomePositionsArithmeticCrossover.cs" />
     <Compile Include="HeuristicLabEncodingsRealVectorEncodingPlugin.cs" />
+    <Compile Include="Interfaces\IRealVectorStrategyParameterManipulator.cs" />
+    <Compile Include="Interfaces\IRealVectorStrategyParameterCrossover.cs" />
+    <Compile Include="Interfaces\IRealVectorStrategyParameterCreator.cs" />
+    <Compile Include="Interfaces\IRealVectorStrategyParameterOperator.cs" />
     <Compile Include="Interfaces\IAdditiveRealVectorMoveOperator.cs" />
     <Compile Include="Interfaces\IRealVectorBoundsChecker.cs" />
     <Compile Include="Interfaces\IRealVectorMoveGenerator.cs" />
     <Compile Include="Interfaces\IRealVectorMoveOperator.cs" />
     <Compile Include="Manipulators\NormalAllPositionsManipulator.cs" />
+    <Compile Include="StrategyParameters\StrategyVectorCreator.cs" />
+    <Compile Include="StrategyParameters\StrategyVectorCrossover.cs" />
+    <Compile Include="StrategyParameters\StrategyVectorManipulator.cs" />
     <Compile Include="Moves\AdditiveMoveTabuAttribute.cs" />
     <Compile Include="Moves\AdditiveTabuMoveEvaluator.cs" />
     <Compile Include="Moves\AdditiveTabuMoveMaker.cs" />
